5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1650_651.log
== TEST (2019-04-15 10:30:25) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx==F.upper()):
	print(62.1*a)-44.7
else:
	print(72.7*a)-58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(sx==F.upper()):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:32:07) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx==F.upper()):
	print(62.1*a)-44.7
else:
	print(72.7*a)-58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(sx==F.upper()):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:33:13) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx==f.upper()):
	print(62.1*a)-44.7
else:
	print(72.7*a)-58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(sx==f.upper()):
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:33:35) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx==f.upper()):
	print(62.1*a)-44.7
else:
	print(72.7*a)-58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(sx==f.upper()):
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:34:26) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx=="F".upper()):
	print(62.1*a)-44.7
else:
	print(72.7*a)-58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(62.1*a)-44.7
TypeError: unsupported operand type(s) for -: 'NoneType' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:35:04) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx=="F".upper()):
	print(62.1*a)
else:
	print(72.7*a)
-- OUTPUT:
62.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:35:23) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx=="F".upper()):
	print(62.1*a)
else:
	print(72.7*a-58)
-- OUTPUT:
62.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:36:34) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx=="F".upper()):
	print(round(62.1*a),2)
else:
	print(round(72.7*a-58),2)
-- OUTPUT:
62 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:36:55) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx=="F".upper()):
	print(round(62.1*a), 2)
else:
	print(round(72.7*a-58), 2)
-- OUTPUT:
62 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:38:11) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx=="F".upper()):
	print(round(62.1.a), 2)
else:
	print(round(72.7.a-58), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(62.1.a), 2)
AttributeError: 'float' object has no attribute 'a'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:41:46) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx=="F".upper()):
	print(round(62.1*a-44.7,2))
else:
	print(round(72.7*a-58,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:41:55) 
-- CODE:
a=float(input("digite sua altura: "))
sx=input("digite M ou F: ")
if(sx=="F".upper()):
	print(round(62.1*a-44.7,2))
else:
	print(round(72.7*a-58,2))
-- EXECUTION TIME:
0.119009
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
